Problems navigating by caret in links whose text wraps onto subsequent lines. https://bugs.webkit.org/show_bug.cgi?id=25676

Reviewed by Darin Adler.

WebCore:

We should not search ahead if we are not in the last element.

* dom/Position.cpp:

LayoutTests:

Added tests showing the problem.

* fast/events/multiline-link-arrow-navigation.html
* fast/events/multiline-link-arrow-navigation-expected.txt

Canonical link: https://commits.webkit.org/45879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54566 268f45cc-cd09-0410-ab3c-d52691b4dbfc